src/test/ui/pattern/usefulness/slice-patterns-exhaustiveness.stderr
error[E0004]: non-exhaustive patterns: `&[false, _]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:8:11
   |
LL |     match s2 {
   |           ^^ pattern `&[false, _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool; 2]`

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:12:11
   |
LL |     match s3 {
   |           ^^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool; 3]`

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:16:11
   |
LL |     match s10 {
   |           ^^^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool; 10]`

error[E0004]: non-exhaustive patterns: `&[false, true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:25:11
   |
LL |     match s2 {
   |           ^^ pattern `&[false, true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool; 2]`

error[E0004]: non-exhaustive patterns: `&[false, .., true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:30:11
   |
LL |     match s3 {
   |           ^^ pattern `&[false, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool; 3]`

error[E0004]: non-exhaustive patterns: `&[false, .., true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:35:11
   |
LL |     match s {
   |           ^ pattern `&[false, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[_, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:42:11
   |
LL |     match s {
   |           ^ pattern `&[_, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[_, _, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:46:11
   |
LL |     match s {
   |           ^ pattern `&[_, _, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[false, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:51:11
   |
LL |     match s {
   |           ^ pattern `&[false, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[false, _, ..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:56:11
   |
LL |     match s {
   |           ^ pattern `&[false, _, ..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[_, .., false]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:62:11
   |
LL |     match s {
   |           ^ pattern `&[_, .., false]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[_, _, .., true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:69:11
   |
LL |     match s {
   |           ^ pattern `&[_, _, .., true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[true, _, .., _]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:76:11
   |
LL |     match s {
   |           ^ pattern `&[true, _, .., _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[..]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:85:11
   |
LL |     match s {
   |           ^ pattern `&[..]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[true]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:89:11
   |
LL |     match s {
   |           ^ pattern `&[true]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool]`

error[E0004]: non-exhaustive patterns: `&[false]` not covered
  --> $DIR/slice-patterns-exhaustiveness.rs:97:11
   |
LL |     match s1 {
   |           ^^ pattern `&[false]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms
   = note: the matched value is of type `&[bool; 1]`

error: aborting due to 16 previous errors

For more information about this error, try `rustc --explain E0004`.
